Fix rsvp link and form alignment

--- a/home.css
+++ b/home.css
@@ -119,6 +119,7 @@
   color: var(--dl-color-gray-white);
   padding: var(--dl-space-space-doubleunit);
   border-radius: var(--dl-radius-radius-radius4);
+  text-decoration: none;
   background-color: #142d3d;
 }
 .home-mobile-menu {
@@ -1674,18 +1675,21 @@
   background-color: var(--dl-color-gray-900);
 }
 .home-container14 {
+  width: 60%;
   height: 362px;
   display: flex;
   align-self: center;
+  margin-top: var(--dl-space-space-tenunits);
   align-items: flex-start;
+  margin-bottom: var(--dl-space-space-tenunits);
   flex-direction: column;
 }
 .home-text114 {
   align-self: center;
 }
 .home-form {
-  width: 500px;
-  height: 100px;
+  width: 100%;
+  height: 216px;
   display: flex;
   align-self: center;
   margin-top: var(--dl-space-space-doubleunit);
@@ -1694,11 +1698,13 @@
   justify-content: flex-start;
 }
 .home-container15 {
-  flex: 0 0 auto;
+  flex: 1;
   width: 100%;
   height: 100px;
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
+  justify-content: flex-start;
 }
 .home-text117 {
   margin-right: var(--dl-space-space-doubleunit);
@@ -1711,6 +1717,7 @@
   align-items: flex-start;
   padding-top: var(--dl-space-space-doubleunit);
   padding-bottom: var(--dl-space-space-doubleunit);
+  justify-content: flex-start;
 }
 .home-text121 {
   margin-right: var(--dl-space-space-doubleunit);
@@ -1738,6 +1745,7 @@
 }
 .home-footer-container {
   width: 100%;
+  display: none;
   align-items: center;
   flex-direction: column;
   justify-content: center;
